--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
       margin:0;
       padding: 0;
     }
+    body{
+      background-color: #44475A;
+    }
       </style>
   </head>
   <body>
